--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "joigoose": "^8.0.2",
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "stripe": "^13.3.0"
   },
   "devDependencies": {
